Text layout bugs have been fixed. Cursor bug has been fixed.

--- a/components/ContactFooter/styles.module.scss
+++ b/components/ContactFooter/styles.module.scss
@@ -20,6 +20,7 @@
     font-size: 1.8rem;
     color: $header-color;
     margin-bottom: 0.2rem;
+    text-align: center;
   }
 
   p {
