--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,8 +28,7 @@
 
 html {
   height: 100vh;
-  // height: 100%;
-  font-size: 10px;
+  font-size: 62.5%;
   font-family: 'Montserrat', 'Alata', sans-serif;
 
   @supports (height: 100dvh) {
