--- a/ui/FancyLink/styles.module.scss
+++ b/ui/FancyLink/styles.module.scss
@@ -1,8 +1,10 @@
 .fancy_link {
-  display: inline-block;
   position: relative;
   cursor: pointer;
   font-family: 'Montserrat', 'Alata', sans-serif;
+  width: fit-content;
+  text-decoration: none;
+  white-space: nowrap;
 
   &::before,
   &::after {
@@ -62,6 +64,10 @@
   font-weight: bold;
   color: #9a9a9a;
   z-index: 2;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .thin {
